[Update] Main Window: Add Restore the main window position feature. VRCT終了時（メイン画面のXを押した時）の画面位置とサイズを記録し、次回起動時に同じ場所同じサイズで表示させる機能を追加。デフォルトでオンです。 ※次回アプデ後の初期起動時はみんな、一番左上端座標x-0 y-0で表示されます。この設定をオフにすると常に画面中央（今まで通り）に表示されます。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -113,6 +113,10 @@ config_window:
   ui_language:
     label: UI Language
 
+  to_restore_main_window_geometry:
+    label: Remember The Main Window Position
+    desc: Restore the position and size of the previous window upon startup.
+
   deepl_auth_key:
     label: DeepL Auth Key
 
