--- a/locales/en.yml
+++ b/locales/en.yml
@@ -185,6 +185,12 @@ config_window:
   send_only_translated_messages:
     label: Send Only Translated Messages
 
+  send_message_button_type:
+    label: Send Message Button
+    hide: Hide (Use enter key to send)
+    show: Show
+    show_and_disable_enter_key: Show and disable to send when pressed enter key
+
   notice_xsoverlay:
     label: Notification XSOverlay (VR Only)
     desc: Notify received messages by using XSOverlay's notification feature.
