[Update] Main Window: (WIP UI) CTranslate2、内部翻訳機能などの追加により、メイン画面にUI追加。デザインは確定ではなく、UI Scaling未対応などテスト状態です。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -9,6 +9,8 @@ main_window:
   both_direction_desc: Translate Each Other
   swap_button_label: Swap Languages
   target_language: Target Language
+  translator: Translator
+  translator_ctranslate2: Internal
 
   textbox_tab_all: All
   textbox_tab_sent: Sent
