--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -9,6 +9,8 @@ main_window:
   both_direction_desc: 双方向に翻訳
   swap_button_label: 言語を入れ替え
   target_language: 相手の言語
+  translator: 翻訳エンジン
+  translator_ctranslate2: オフライン翻訳
 
   textbox_tab_all: 全て
   textbox_tab_sent: 送信
