[bugfix/chore] Main Window: Selectable Translation Engines. ・ドロップダウンメニューの文言修正。（CTranslate2の表示修正と、デフォルトである旨を追加） ・幅が規定値より超えた時の処理でエラーが発生するのを修正

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -10,7 +10,7 @@ main_window:
   swap_button_label: Swap Languages
   target_language: Target Language
   translator: Translator
-  translator_ctranslate2: Internal
+  translator_ctranslate2: Internal (Default)
 
   textbox_tab_all: All
   textbox_tab_sent: Sent
