--- a/locales/ko.yml
+++ b/locales/ko.yml
@@ -30,7 +30,7 @@ main_window:
 
     no_mic_device_detected_error: 마이크 디바이스를 찾지 못했습니다.
     no_speaker_device_detected_error: 스피커 디바이스를 찾지 못했습니다.
-    translation_engine_limit_error: 번역 기능이 자동으로 중지되었습니다. 번역 엔진에 대한 요청이 너무 많아 일시적으로 사용이 제한되고 있습니다. 잠시 기다렸다가 VRCT를 재부팅하고 다시 시도해 보세요.
+    # translation_engine_limit_error: 번역 기능이 자동으로 중지되었습니다. 번역 엔진에 대한 요청이 너무 많아 일시적으로 사용이 제한되고 있습니다. 잠시 기다렸다가 VRCT를 재부팅하고 다시 시도해 보세요.
 
     detected_by_word_filter: 단어 필터에 등록된 단어 %{detected_message}(이)가 감지되어 전송하지 않았습니다.
 
@@ -57,8 +57,9 @@ main_window:
     accept_adjust_ui_size: "작게 줄이고 재부팅"
 
 
-    translation_engine_limit_error: "번역 기능이 자동으로 중지되었습니다. \n번역 엔진에 대한 요청이 너무 많아 \n일시적으로 사용이 제한되었습니다. \n잠시 기다렸다가 VRCT를 재부팅한 후 다시 시도해 보십시오."
-    accept_translation_engine_limit_error: 확인하고 닫기
+# [Deprecated]
+    # translation_engine_limit_error: "번역 기능이 자동으로 중지되었습니다. \n번역 엔진에 대한 요청이 너무 많아 \n일시적으로 사용이 제한되었습니다. \n잠시 기다렸다가 VRCT를 재부팅한 후 다시 시도해 보십시오."
+    # accept_translation_engine_limit_error: 확인하고 닫기
 
 
 selectable_language_window:
