[Update] Config Window: Translation Tab: add "Use Translation Feature" and "Select Internal Translation Model" 翻訳機能そのものを使うかどうかの設定と、内部翻訳モデルの選択UI追加
・Use Translation Feature からは True or Falseを渡し、config.USE_TRANSLATION_FEATUREへ保存します。
・Select Internal Translation Model からは 文字列 "Small" か "Large" を渡し、config.WEIGHT_TYPEへ保存します。

※機能側実装に合わせて、初回起動時config.WEIGHT_TYPEには"Small"ではなく"m2m100_418m"が入ります。
※それに合わせ、起動時はSmall固定にしています。文字列"Small"対応後、一つ下のコメントアウト部分と入れ替えてください。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -119,6 +119,16 @@ config_window:
     label: Remember The Main Window Position
     desc: Restore the position and size of the previous window upon startup.
 
+  use_translation_feature:
+    label: Use Translation Feature
+    desc: You can't use the translation feature while this is turned off. Instead, the VRCT startup becomes a little faster. This is for users who don't need the translation feature and only use VRCT as a chatbox and transcription tool.
+
+  ctranslate2_weight_type:
+    label: Select Internal Translation Model
+    desc: You can choose the translation model to use for the internal translation engine.
+    small: "Basic model (%{capacity})"
+    large: "High accuracy model (%{capacity})"
+
   deepl_auth_key:
     label: DeepL Auth Key
 
