--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -81,6 +81,8 @@ config_window:
     transcription_speaker: スピーカー
     transcription_internal_model: 音声認識モデル
     others: その他
+    others_send_message_formats: メッセージフォーマット (送信)
+    others_received_message_formats: メッセージフォーマット (XSOverlay & Speaker2Chatbox)
     advanced_settings: 高度な設定
 
 
@@ -234,14 +236,14 @@ config_window:
     error_message: "[message]と[translation]という文字は使えません。"
 
   received_message_format:
-    label: 送信するメッセージのフォーマット
-    desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換されます。\n※XSOverlayでの通知受け取り機能にも使われます。"
+    label: 受信するメッセージのフォーマット
+    desc: "XSOverlay通知受け取り機能で使用されます。\n[message]がメッセージに置換されます。\n※Speaker2Chatboxでの送信機能にも使われます。"
     example_text: これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。
     error_message: "[message]という文字は使えません。"
 
   received_message_format_with_t:
-    label: 送信するメッセージのフォーマット（翻訳付き）
-    desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換され、[translation]が翻訳されたメッセージに置換されます。\n※XSOverlayでの通知受け取り機能にも使われます。"
+    label: 受信するメッセージのフォーマット（翻訳付き）
+    desc: "XSOverlay通知受け取り機能で使用されます。\n[message]がメッセージに置換され、[translation]が翻訳されたメッセージに置換されます。\n※Speaker2Chatboxでの送信機能にも使われます。"
     example_text: これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。
     error_message: "[message]と[translation]という文字は使えません。"
 
