--- a/locales/en.yml
+++ b/locales/en.yml
@@ -129,6 +129,7 @@ config_window:
   deepl_auth_key:
     label: DeepL Auth Key
     desc: Please select %{translator} on the main screen with DeepL_API when using. ※Some languages may not be supported.
+    open_auth_key_webpage: Open DeepL Account Webpage
 
   mic_host:
     label: Mic Host/Driver
