--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -128,6 +128,7 @@ config_window:
   deepl_auth_key:
     label: DeepL 認証キー
     desc: "使用の際は、メイン画面にある %{translator} をDeepL_APIに変更してください。\n※対応していない言語もあります。"
+    open_auth_key_webpage: DeepLアカウントページを開く
 
   mic_host:
     label: マイク（ホスト/ドライバー）
