--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -194,7 +194,7 @@ config_window:
 
   whisper_weight_type:
     label: Whisperモデルのタイプ
-    desc: 基本的に、容量が多いモデルほど精度は高いですが、文字起こしまでの時間が伸び、CPU使用率も増加します。各モデルの説明はドキュメントをご覧ください。
+    desc: "基本的に、容量が多いモデルほど精度は高いですが、文字起こしまでの時間が伸び、CPU使用率も増加します。各モデルの説明はドキュメントをご覧ください。\n※特にmediumより容量の大きいモデルは、CPUの性能によっては使用すらも困難です。"
     model_template: "%{model_name} モデル (%{capacity})"
     recommended_model_template: "%{model_name} モデル (%{capacity}) (推奨)"
 
