[Update] Config Window: Transcription (Speaker) Tab. Add Select Speaker Devices.

--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -167,6 +167,9 @@ config_window:
     count_desc: "現在登録されている単語数: %{count}"
 
 
+  speaker_device:
+    label: スピーカー （デバイス）
+
   speaker_dynamic_energy_threshold:
     label_for_automatic: "スピーカー入力感度の調整 (現在の設定: 自動)"
     desc_for_automatic: スピーカーの入力感度を自動的に調節する。
