--- a/locales/en.yml
+++ b/locales/en.yml
@@ -168,6 +168,9 @@ config_window:
     count_desc: "Current registered word count: %{count}"
 
 
+  speaker_device:
+    label: Speaker Device
+
   speaker_dynamic_energy_threshold:
     label_for_automatic: "Speaker Energy Threshold (Current Setting: Automatic)"
     desc_for_automatic: "Automatically determine speaker input sensitivity."
