--- a/locales/en.yml
+++ b/locales/en.yml
@@ -49,7 +49,7 @@ main_window:
   cover_message: The functionality is temporarily disabled until the settings window is closed.
 
   confirmation_message:
-    update_software: "Download new version and restart automatically.\nIt'll take a while. Do it now?"
+    update_software: "Download the new version and automatically restart the app.\nIt'll take a while. Do it now?"
     deny_update_software: Do it later
     accept_update_software: Update and Restart
     updating: Now updating...
