--- a/locales/ko.yml
+++ b/locales/ko.yml
@@ -79,7 +79,7 @@ config_window:
     transcription: 음성인식
     transcription_mic: 마이크
     transcription_speaker: 스피커
-    # transcription_internal_model:
+    transcription_internal_model: 내부 엔진
     others: 기타
     others_send_message_formats: 메시지 형식 (전송)
     others_received_message_formats: 메시지 형식 (수신)
@@ -128,10 +128,10 @@ config_window:
 
   deepl_auth_key:
     label: DeepL 인증키
-    # desc:
-    # open_auth_key_webpage:
-    # auth_key_success:
-    # auth_key_error:
+    desc: "사용시 메인화면에 있는 %{translator}를 DeepL_API로 변경해 주세요.\n지원하지 않는 언어도 있습니다."
+    open_auth_key_webpage: DeepL 계정 페이지 열기
+    auth_key_success: 인증키 갱신이 완료되었습니다.
+    auth_key_error: 인증키가 잘못되었거나 API 사용 제한이 상한에 도달했습니다.
 
   mic_host:
     label: 마이크 호스트/드라이버
@@ -194,15 +194,15 @@ config_window:
     desc: 식된 단어 수의 하한값으로, 이 수치를 초과하는 경우에만 결과를 로그에 표시합니다.
     error_message: 0 이상의 숫자만 설정할 수 있습니다.
 
-  # use_whisper_feature:
-  #   label:
-  #   desc:
+  use_whisper_feature:
+    label: 음성 인식에 Whisper 모델을 사용
+    desc: 일부 언어에서는 음성 인식의 정확도가 향상될 수 있어요. 음성 인식 중 CPU 사용률이 올라가기 때문에 사용하시는 PC의 사양을 고려하여 이 기능을 사용해주세요.
 
-  # whisper_weight_type:
-    # label:
-    # desc:
-    # model_template:
-    # recommended_model_template:
+  whisper_weight_type:
+    label: Whisper 모델 타입
+    desc: "기본적으로 용량이 많은 모델일수록 정밀도는 높지만, 음성 인식의 시간이 늘어나며 CPU 사용률도 늘어나요.각 모델의 설명은 문서를 참조해주세요.\n※특히 medium보다 용량이 큰 모델은 CPU의 성능에 따라서는 사용조차 어려울 수 있어요. "
+    model_template: "%{model_name} 모델 (%{capacity})"
+    recommended_model_template: "%{model_name} 모델 (%{capacity}) (권장)"
 
   auto_clear_the_message_box:
     label: 챗박스 자동 삭제
