--- a/locales/en.yml
+++ b/locales/en.yml
@@ -18,6 +18,7 @@ main_window:
   textbox_tab_system: System
 
   textbox_system_message:
+    enabled_easter_egg: Whoa! You caught us! There is something...like...easter-egg-ish function has enabled!
     enabled_translation: Translation feature is turned on.
     disabled_translation: Translation feature is turned off.
     enabled_voice2chatbox: Transcription from the microphone has started.
