[Update] Main Window, Quick Settings Window: add VR Settings and it'll open the settings window that is for Overlay settings.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -207,7 +207,7 @@ config_window:
     recommended_model_template: "%{model_name} model (%{capacity}) (Recommended)"
 
 
-  enable_overlay_ui:
+  enable_overlay_small_log:
     label: OpenVR
     # desc:
 
