[Update] Overlay Settings: 初期値に戻すボタンと機能を追加。 y_posの設定可能範囲を増やした。 padding調整など。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -66,6 +66,10 @@ selectable_language_window:
   go_back_button: Go Back
 
 
+overlay_settings:
+  restore_default_settings: Restore Default Settings
+
+
 config_window:
   config_title: Settings
   compact_mode: Compact Mode
