--- a/locales/en.yml
+++ b/locales/en.yml
@@ -68,6 +68,13 @@ selectable_language_window:
 
 overlay_settings:
   restore_default_settings: Restore Default Settings
+  opacity: Opacity
+  ui_scaling: UI Scaling
+  x_position: X-axis (left-right)
+  y_position: Y-axis (up-down)
+  depth: Z-axis (front-back)
+  display_duration: Display duration
+  fadeout_duration: Fadeout duration
 
 
 config_window:
@@ -212,7 +219,7 @@ config_window:
 
 
   enable_overlay_small_log:
-    label: OpenVR
+    label: Enable Overlay
     # desc:
 
   auto_clear_the_message_box:
