--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -67,6 +67,13 @@ selectable_language_window:
 
 overlay_settings:
   restore_default_settings: 初期値に戻す
+  opacity: 透明度
+  ui_scaling: サイズ
+  x_position: X軸（左右）
+  y_position: Y軸（上下）
+  depth: Z軸（前後）
+  display_duration: 表示時間
+  fadeout_duration: フェードアウト時間
 
 
 config_window:
@@ -206,6 +213,10 @@ config_window:
     desc: "基本的に、容量が多いモデルほど精度は高いですが、文字起こしまでの時間が伸び、CPU使用率も増加します。各モデルの説明はドキュメントをご覧ください。\n※特にmediumより容量の大きいモデルは、CPUの性能によっては使用すらも困難です。"
     model_template: "%{model_name} モデル (%{capacity})"
     recommended_model_template: "%{model_name} モデル (%{capacity}) (推奨)"
+
+
+  enable_overlay_small_log:
+    label: Overlay機能を有効
 
 
   auto_clear_the_message_box:
