--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -45,6 +45,8 @@ main_window:
     opened_web_page_vrct_documents: "お使いのブラウザで、VRCTのドキュメントを開きました。使用方法などはそちらに記載されています。\n不具合、ご要望、その他お問い合わせはドキュメント最下部にあるLinks、「お問合せフォーム」もしくはX (元Twitter) にて気軽にご連絡ください！"
 
   update_available: 新しいバージョンが出ました！
+  state_text_enabled: 有効
+  state_text_disabled: 無効
 
   cover_message: 設定画面が閉じられるまで、一時的に機能を停止しています。
 
