--- a/locales/en.yml
+++ b/locales/en.yml
@@ -74,7 +74,7 @@ overlay_settings:
   ui_scaling: UI Scaling
   x_position: X-axis (left-right)
   y_position: Y-axis (up-down)
-  depth: Z-axis (front-back)
+  z_position: Z-axis (front-back)
   x_rotation: X-axis rotation
   y_rotation: Y-axis rotation
   z_rotation: Z-axis rotation
